UI Alignmnet fixed

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -37,6 +37,10 @@
     text-align: left;
 }
 
+.main-layout{
+    width: calc(100% - 3.6rem);
+}
+
 .main-l-sidebar{
     width: calc(100vw - 200px) ;
 }
